--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -155,7 +155,7 @@
             >
 
                 <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div *ngIf="d.typeSign">
@@ -180,7 +180,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -405,7 +405,7 @@
             >
 
             <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với văn thư tổ chức của tôi-->
-            <div class="participants--input" style="display: flex">
+            <!-- <div class="participants--input" style="display: flex">
               <div class="participants__name">
                 <div class="label_detail text-color">
                   <div *ngIf="d.typeSign">
@@ -430,7 +430,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -909,7 +909,7 @@
               
 
                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký tổ chức của đối tác-->
-               <div class="participants--input" style="display: flex">
+               <!-- <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div *ngIf="d.typeSign">
@@ -934,7 +934,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -1166,7 +1166,7 @@
               >
 
                 <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với văn thư đối tác-->
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div *ngIf="d.typeSign">
@@ -1191,7 +1191,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -1409,7 +1409,7 @@
               >
 
                 <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký là cá nhân-->
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div *ngIf="d.typeSign">
@@ -1434,7 +1434,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
