--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -1,6 +1,16 @@
 <div class="container-fluid">
   <h3 style="text-align: center; color: #106DB6">{{'contract_processing_flow' | translate}}</h3>
   <div style="max-height: 405px; overflow: auto;font-size: 14px">
+    <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
+      <div class="col-md-6" style="display: flex; flex-direction: column;text-align: left;">
+        <span>{{this.personCreate}}</span>
+        <span style="color: #8B8B8B">({{this.emailCreate}})</span>
+      </div>
+      <div class="col-md-6" style="display: flex; flex-direction: column;text-align: center">
+        <span style ="color: '#106DB6'">Người khởi tạo</span>
+        <span style="color: #8B8B8B">({{this.timeCreate}})</span>
+      </div>
+    </div>
     <div *ngFor="let d of is_list_name">
       <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
         <div class="col-md-6" style="display: flex; flex-direction: column;text-align: left;">
