--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -557,7 +557,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]="email" [(ngModel)]="d.login_by"/>
+                          <input (change)="changeTypeSign(d)" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]="email" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
                           {{'Đăng nhập bằng email' | translate}}
@@ -567,7 +567,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]="phone" [(ngModel)]="d.login_by"/>
+                          <input (change)="changeTypeSign(d)" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]="phone" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
                           {{'Đăng nhập bằng số điện thoại' | translate}}
@@ -678,30 +678,6 @@
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                 [disabled]="getPartnerDocument(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
-
-                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại-->
-                  <!-- <div class="participants--input" style="display: flex">
-                    <div class="participants__name">
-                      <div class="label_detail text-color">
-                        <div>
-                          <input name="checkPhoneMailParticipantDoc_{{index}}_{{id}}" type="radio" [value]="email" [(ngModel)]="d.login_by"/>
-                        </div>&nbsp;
-                        <div>
-                          {{'Đăng nhập bằng email' | translate}}
-                        </div>
-                      </div>
-                    </div>
-                    <div class="participants__name">
-                      <div class="label_detail text-color">
-                        <div>
-                          <input name="checkPhoneMailParticipantDoc_{{index}}_{{id}}" type="radio" [value]="phone" [(ngModel)]="d.login_by" />
-                        </div>&nbsp;
-                        <div>
-                          {{'Đăng nhập bằng số điện thoại' | translate}}
-                        </div>
-                      </div>
-                    </div>
-                  </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
