--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -28,4 +28,12 @@
   </div>
 </div>
 
+<div id="export-html-pki" style="min-height: 80px;display: flex; font-size: 9px">
+  <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
+  <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Số điện thoại: {{phonePKI}}</span>
+    <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+  </div>
+</div>
+
 <!--<button style="margin-top: 25px" (click)="convertImage()">Click me convert</button>-->
