--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -110,6 +110,9 @@
               <div class="div_icon" *ngIf="item.contractStatus == 30">
                 <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
               </div>
+              <div class="div_icon" *ngIf="item.contractStatus == 32">
+                <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng"/>
+              </div>
             </div>
           </div>
         </div>
