--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -21,6 +21,9 @@
         </div>
         <div class="col-md-6" style="display: flex; flex-direction: column;text-align: center">
           <span [style.color]="d.status != 0 ? '#106DB6' : '#545252'">{{d.status}}</span>
+          <div class="div_icon" *ngIf="d.status == 3">
+            <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Lý do từ chối hợp đồng"/>
+          </div>
           <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
         </div>
       </div>
