--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -47,8 +47,7 @@
               <img src="assets/img/icon_name.svg" class="input-img">
 
               <!--Trường hợp typeOfSignEmail-->
-              <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                >
+              <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"  ngModel="name">
 
                 <!--Trường hợp typeOfSignPhone-->
               <!-- <input  type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"/> -->
@@ -94,7 +93,7 @@
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_email' | translate}}" >
+              <input type="text" placeholder="{{'nhap_email' | translate}}" ngModel="email">
             </div>
           </div>
 
@@ -102,7 +101,7 @@
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" >
+              <input type="text" placeholder="{{'nhap_sdt' | translate}}" ngModel="phone">
             </div>
           </div>
         </div>
