--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -3,6 +3,7 @@
 //  src: url('assets/scss/font/LexendDeca-VariableFont_wght.ttf') format('ttf');
 //}
 
+
 .sample-contract {
   //height: calc(100vh - 104px);
   height: calc(100vh - 151px);
@@ -362,14 +363,19 @@
 
 
 .input-mobile {
+  // appearance: none;
+
   box-sizing: border-box; 
   text-align: center; 
+  // text-align: -webkit-center;
   // width: 38px;
   // height: 20px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
   font-size: 15px;
+  // -webkit-appearance: none;
+
 }
 
 
