--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -97,7 +97,8 @@
         <div id="pdf-viewer-step-3">
             <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
                 <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="changePosition(d)">
-                    <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
+                    <div *ngIf="d.sign_unit != 'text'" class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
+                    <div *ngIf="d.sign_unit == 'text'" class="name-sig-img-daky">{{d.text_attribute_name ? d.text_attribute_name  : ''}}</div>
                     <div class="sig-img-daky" (click)="onCancel($event, d)">
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
