--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -140,8 +140,8 @@
                 </button>
 
                 <div style="position: absolute;right: 5px;margin-top: -35px;">
-                    <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
-                    style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
+                    <!-- <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
+                    style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button> -->
                     <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
                 </div>
             </a>
